[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "se-scraper"
version         = "1.0.0"
description     = "Schneider Electric Partner Locator — async web scraper"
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "MIT" }

dependencies = [
    "playwright>=1.42.0",
    "pandas>=2.2.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
# After `pip install -e .`, the `se-scraper` command becomes available.
se-scraper = "se_scraper.__main__:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["se_scraper*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
